--- a/02-comming-soon/css/styles.css
+++ b/02-comming-soon/css/styles.css
@@ -139,7 +139,7 @@ html {
 
 .right-section .logo{ position: absolute; top: 10%; left: 0%; height: 10%; }
 
-.right-section .logo img{ height: 200%; width: auto; } 
+.right-section .logo img{ height: 700%; width: 100%; } 
 
 
 .right-section .main-content{ padding: 40px 40px 40px 0; }
@@ -164,7 +164,7 @@ html {
 .main-content .post-desc{ color: #999; }
 
 
-.right-section .footer-icons{ position: absolute; bottom: 30px;}
+.right-section .footer-icons{ position: absolute; bottom: 100px;}
 
 .right-section .footer-icons > li > a{ display: inline-block; font-size: 1.07em; padding: 0 0px; }
 
